# Vos

./: .gitignore  CMakeLists.txt  Makefile  README  README.md  build.ps1  test-kernel.c
gui/: CMakeLists.txt  README.md  gui.hpp
gui/apps/: file_manager_app.cpp  file_manager_app.hpp  terminal_app.cpp  terminal_app.hpp
gui/examples/: simple_app.cpp
gui/toolkit/: widget.cpp  widget.hpp
gui/windowing/: window.cpp  window.hpp  window_manager.cpp  window_manager.hpp
kernel/: CMakeLists.txt  kernel-entry.c  linker.ld
kernel/arch/x86_64/: boot.s  context.c  cpu.c  halt.s  interrupts.s  mmu.c
kernel/core/: ipc.c  main.c  memory.c  process.c  scheduler.c  sync.c
kernel/drivers/: block.c  console.c  pci.c
kernel/fs/: ext4.c  vfs.c
kernel/include/: kernel.h
kernel/lib/: assert.c  string.c
kernel/mm/: page.c  vma.c
lib/: CMakeLists.txt
pkgmgr/: main.go
shell/: CMakeLists.txt  builtins.c  completion.c  env.c  executor.c  history.c  jobs.c  lexer.c  lineread.c  main.c  parser.c  shell.h
tests/: CMakeLists.txt  integration_test.c  kernel_test.c  memory_test.c  scheduler_test.c  shell_test.c
utils/: CMakeLists.txt
